* [Home] Fixed translations
* [Installer] Complete visual redesign using Bootstrap
* [Learning Path] Made the menu wider
* [Personal Calendar] Moved publish button to front, make sure primary buttons like the publish button are always placed first 
* [PHP7] Eliminated dependencies on old non-compatible libraries and/or provided working alternatives whenever necessary
* [Platform] Allow the layout container to be either fixed or fluid on demand
* [Repository] Fixed translations when a file is uploaded through uploadify (attachments)
* [Repository] Fixed translations
* [User Tool] Fixed translations
* [Weblcms] Fixed publisher translations
* [Weblcms] Fixed translations in the manage rights component
* [Weblcms] Navigate to overlaps with the course title on smaller screens
* [Calendar] Changed every translation from "Agenda" To "Calendar" for more consistency in translations
* [Weblcms] Changed introduction publisher icon
* [LearningPath] Fixed bug with multiple selected items when viewing the results
* [LearningPath] Fixed the abscence of the extra button when the learning path is first opened
* [LearningPath] Fixed the completed icon on the root of the learning path
* [Repository] Always include the latest version of content objects in the workspaces
* [Weblcms] Changed icons in list view for select / unselect all
* [Course Groups] Fixes for breadcrumbs
* [Repository] Fixed a bug where the search parameters in a workspace could not be removed
* [Repository] Fixed a bug where adding an existing content object doesn't keep track of the selected category in the workspaces
* [Repository] Remember the search parameter when navigating in the repo viewer
* [Weblcms] Fixed a fatal error in the course menu home block
* [Course Groups] Added a complete introduction text publisher where you can create a new introduction or select / import an existing one.
* [Repository] Links between workspaces and objects are now based on content object numbers instead of content object ids