@@ -63,3 +63,4 @@ ShowToday = "Show today"
 Slideshow = "Slideshow"
 SlideshowOptions = "Slideshow options"
 SlideshowSettings = "Slideshow settings"
+WebpageInformation = "HTML Pages are for advanced users only! If you want to create content that has to be included and linked to other resources of Chamilo you should create a <b><i>Page</i></b> object. <br />In an HTML page you can create content separately from Chamilo. HTML pages will be rendered in an IFrame window and can not use / reference internal Chamilo resources."
