@@ -62,3 +62,4 @@ ShowToday = "Toon vandaag"
 Slideshow = "Diavoorstelling"
 SlideshowOptions = "Opties voor de diavoorstelling"
 SlideshowSettings = "Instellingen voor de diavoorstelling"
+WebpageInformation = "Het gebruik van HTML pagina's wordt enkel aangeraden voor geavanceerde gebruikers. Wanneer je een pagina wenst aan te maken die geïntegreerd wordt in Chamilo en die gebruik kan maken van andere Chamilo objecten (zoals filmpjes, afbeeldingen, ...) moet je gebruik maken van het object type <b><i>Pagina</i></b>. <br /><br />HTML pagina's worden afzonderlijk getoond in een iFrame en kunnen dus geen gebruik maken van interne Chamilo bronnen."
